# grokdeck

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: grokdeck.desktop
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/bridge/: event_types.rs  mod.rs  process.rs
src-tauri/src/commands/: agent.rs  auth.rs  file_utils.rs  install.rs  mod.rs  session.rs  session_cmd.rs  settings.rs  workspace.rs
src-tauri/src/store/: mod.rs  settings.rs  workspace.rs
src/components/chat/: ActiveThread.tsx  ChatArea.tsx  ChatStatusBar.tsx  EmptyState.tsx  FileTypeIcon.tsx  MessageBubble.tsx  PromptInput.tsx  StreamingIndicator.tsx  ThinkingBlock.tsx  ThreadTabBar.tsx  ToolCallCard.tsx
src/components/onboarding/: WelcomePage.tsx
src/components/preview/: PreviewPanel.tsx
src/components/settings/: SettingsPage.tsx
src/components/shared/: ConfirmModal.tsx  GrokLogo.tsx  Markdown.tsx  ProtectedRoute.tsx
src/components/sidebar/: AddWorkspaceModal.tsx  Sidebar.tsx
src/components/signin/: SignInPage.tsx
src/hooks/: useAgent.ts  useAuth.tsx  useDerivedArtifacts.ts  useFileAttachment.ts  useHandleSend.ts  useWorkspaces.ts
src/pages/: MainPage.tsx  OnboardingRoute.tsx  SettingsRoute.tsx  SignInRoute.tsx
src/stores/: agentStore.ts  previewStore.ts  workspaceStore.ts
src/types/: grok.ts  preview.ts  workspace.ts
src/utils/: artifactDetection.ts  chatUtils.ts
